[package]
name       = "ray-rust"
version    = "0.1.0"
edition    = "2018"
publish    = false
authors    = ["gfirman923@gmail.com"]

[dependencies]
once_cell         = "1.8.0"
pretty_env_logger = "0.4.0"
rand              = "0.8.4"
serenity          = "0.10.9"
chrono = "0.4"
num-traits = "0.2"

[dependencies.config]
version          = "0.11.0"
features         = ["toml"]
default-features = false

[dependencies.log]
version  = "0.4.14"
features = ["std", "serde"]

[dependencies.reqwest]
version  = "0.11.4"
features = ["json"]

[dependencies.serde]
version  = "1.0.148"
features = ["derive"]

[dependencies.tokio]
version  = "1.11.0"
features = ["full"]